@@ -1,6 +1,6 @@
 package Message::Charset::Info;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.1 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.2 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 
 sub UNREGISTERED_CHARSET_NAME () { 0b1 }
 sub REGISTERED_CHARSET_NAME () { 0b10 }
@@ -8,6 +8,11 @@ sub PRIMARY_CHARSET_NAME () { 0b100 | REGISTERED_CHARSET_NAME }
     ## "Name:" field for IANA names
 sub PREFERRED_CHARSET_NAME () { 0b1000 | REGISTERED_CHARSET_NAME }
     ## "preferred MIME name" for IANA names
+
+## iana_status
+sub STATUS_COMMON () { 0b1 }
+sub STATUS_LIMITED_USE () { 0b10 }
+sub STATUS_OBSOLETE () { 0b100 }
 
 ## iana_names
 ## is_html_ascii_superset: "superset of US-ASCII (specifically, ANSI_X3.4-1968)
@@ -76,7 +81,233 @@ $Charset->{'iso-8859-1'}
   is_html_ascii_superset => 1,
 };
 
-## TODO: other names..
+$Charset->{'iso-8859-2'}
+= $IANACharset->{'iso_8859-2:1987'}
+= $IANACharset->{'iso-ir-101'}
+= $IANACharset->{'iso_8859-2'}
+= $IANACharset->{'iso-8859-2'}
+= $IANACharset->{'latin2'}
+= $IANACharset->{'l2'}
+= $IANACharset->{'csisolatin2'}
+= {
+  iana_names => {
+    'iso_8859-2:1987' => PRIMARY_CHARSET_NAME,
+    'iso-ir-101' => REGISTERED_CHARSET_NAME,
+    'iso_8859-2' => REGISTERED_CHARSET_NAME,
+    'iso-8859-2' => PREFERRED_CHARSET_NAME,
+    'latin2' => REGISTERED_CHARSET_NAME,
+    'l2' => REGISTERED_CHARSET_NAME,
+    'csisolatin2' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+};
+
+$Charset->{'iso-8859-3'}
+= $IANACharset->{'iso_8859-3:1988'}
+= $IANACharset->{'iso-ir-109'}
+= $IANACharset->{'iso_8859-3'}
+= $IANACharset->{'iso-8859-3'}
+= $IANACharset->{'latin3'}
+= $IANACharset->{'l3'}
+= $IANACharset->{'csisolatin3'}
+= {
+  iana_names => {
+    'iso_8859-3:1988' => PRIMARY_CHARSET_NAME,
+    'iso-ir-109' => REGISTERED_CHARSET_NAME,
+    'iso_8859-3' => REGISTERED_CHARSET_NAME,
+    'iso-8859-3' => PREFERRED_CHARSET_NAME,
+    'latin3' => REGISTERED_CHARSET_NAME,
+    'l3' => REGISTERED_CHARSET_NAME,
+    'csisolatin3' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+};
+
+$Charset->{'iso-8859-4'}
+= $IANACharset->{'iso_8859-4:1988'}
+= $IANACharset->{'iso-ir-110'}
+= $IANACharset->{'iso_8859-4'}
+= $IANACharset->{'iso-8859-4'}
+= $IANACharset->{'latin4'}
+= $IANACharset->{'l4'}
+= $IANACharset->{'csisolatin4'}
+= {
+  iana_names => {
+    'iso_8859-4:1988' => PRIMARY_CHARSET_NAME,
+    'iso-ir-110' => REGISTERED_CHARSET_NAME,
+    'iso_8859-4' => REGISTERED_CHARSET_NAME,
+    'iso-8859-4' => PREFERRED_CHARSET_NAME,
+    'latin4' => REGISTERED_CHARSET_NAME,
+    'l4' => REGISTERED_CHARSET_NAME,
+    'csisolatin4' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+};
+
+$Charset->{'iso-8859-5'}
+= $IANACharset->{'iso_8859-5:1988'}
+= $IANACharset->{'iso-ir-144'}
+= $IANACharset->{'iso_8859-5'}
+= $IANACharset->{'iso-8859-5'}
+= $IANACharset->{'cyrillic'}
+= $IANACharset->{'csisolatincyrillic'}
+= {
+  iana_names => {
+    'iso_8859-5:1988' => PRIMARY_CHARSET_NAME,
+    'iso-ir-144' => REGISTERED_CHARSET_NAME,
+    'iso_8859-5' => REGISTERED_CHARSET_NAME,
+    'iso-8859-5' => PREFERRED_CHARSET_NAME,
+    'cyrillic' => REGISTERED_CHARSET_NAME,
+    'csisolatincyrillic' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+};
+
+$Charset->{'iso-8859-6'}
+= $IANACharset->{'iso_8859-6:1987'}
+= $IANACharset->{'iso-ir-127'}
+= $IANACharset->{'iso_8859-6'}
+= $IANACharset->{'iso-8859-6'}
+= $IANACharset->{'ecma-114'}
+= $IANACharset->{'asmo-708'}
+= $IANACharset->{'arabic'}
+= $IANACharset->{'csisolatinarabic'}
+= {
+  iana_names => {
+    'iso_8859-6:1987' => PRIMARY_CHARSET_NAME,
+    'iso-ir-127' => REGISTERED_CHARSET_NAME,
+    'iso_8859-6' => REGISTERED_CHARSET_NAME,
+    'iso-8859-6' => PREFERRED_CHARSET_NAME,
+    'ecma-114' => REGISTERED_CHARSET_NAME,
+    'asmo-708' => REGISTERED_CHARSET_NAME,
+    'arabic' => REGISTERED_CHARSET_NAME,
+    'csisolatinarabic' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+      ## NOTE: 3/0..3/9 have different semantics from U+0030..0039,
+      ## but have same character names (maybe).
+};
+
+$Charset->{'iso-8859-7'}
+= $IANACharset->{'iso_8859-7:1987'}
+= $IANACharset->{'iso-ir-126'}
+= $IANACharset->{'iso_8859-7'}
+= $IANACharset->{'iso-8859-7'}
+= $IANACharset->{'elot_928'}
+= $IANACharset->{'ecma-118'}
+= $IANACharset->{'greek'}
+= $IANACharset->{'greek8'}
+= $IANACharset->{'csisolatingreek'}
+= {
+  iana_names => {
+    'iso_8859-7:1987' => PRIMARY_CHARSET_NAME,
+    'iso-ir-126' => REGISTERED_CHARSET_NAME,
+    'iso_8859-7' => REGISTERED_CHARSET_NAME,
+    'iso-8859-7' => PREFERRED_CHARSET_NAME,
+    'elot_928' => REGISTERED_CHARSET_NAME,
+    'ecma-118' => REGISTERED_CHARSET_NAME,
+    'greek' => REGISTERED_CHARSET_NAME,
+    'greek8' => REGISTERED_CHARSET_NAME,
+    'csisolatingreek' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+};
+
+$Charset->{'iso-8859-8'}
+= $IANACharset->{'iso_8859-8:1988'}
+= $IANACharset->{'iso-ir-138'}
+= $IANACharset->{'iso_8859-8'}
+= $IANACharset->{'iso-8859-8'}
+= $IANACharset->{'hebrew'}
+= $IANACharset->{'csisolatinhebrew'}
+= {
+  iana_names => {
+    'iso_8859-8:1988' => PRIMARY_CHARSET_NAME,
+    'iso-ir-138' => REGISTERED_CHARSET_NAME,
+    'iso_8859-8' => REGISTERED_CHARSET_NAME,
+    'iso-8859-8' => PREFERRED_CHARSET_NAME,
+    'hebrew' => REGISTERED_CHARSET_NAME,
+    'csisolatinhebrew' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+};
+
+$Charset->{'iso-8859-9'}
+= $IANACharset->{'iso_8859-9:1989'}
+= $IANACharset->{'iso-ir-148'}
+= $IANACharset->{'iso_8859-9'}
+= $IANACharset->{'iso-8859-9'}
+= $IANACharset->{'latin5'}
+= $IANACharset->{'l5'}
+= $IANACharset->{'csisolatin5'}
+= {
+  iana_names => {
+    'iso_8859-9:1989' => PRIMARY_CHARSET_NAME,
+    'iso-ir-148' => REGISTERED_CHARSET_NAME,
+    'iso_8859-9' => REGISTERED_CHARSET_NAME,
+    'iso-8859-9' => PREFERRED_CHARSET_NAME,
+    'latin5' => REGISTERED_CHARSET_NAME,
+    'l5' => REGISTERED_CHARSET_NAME,
+    'csisolatin5' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+};
+
+$Charset->{'iso-8859-10'}
+= $IANACharset->{'iso-8859-10'}
+= $IANACharset->{'iso-ir-157'}
+= $IANACharset->{'l6'}
+= $IANACharset->{'iso_8859-10:1992'}
+= $IANACharset->{'csisolatin6'}
+= $IANACharset->{'latin6'}
+= {
+  iana_names => {
+    'iso-8859-10' => PRIMARY_CHARSET_NAME | PREFERRED_CHARSET_NAME,
+    'iso-ir-157' => REGISTERED_CHARSET_NAME,
+    'l6' => REGISTERED_CHARSET_NAME,
+    'iso_8859-10:1992' => REGISTERED_CHARSET_NAME,
+    'csisolatin6' => REGISTERED_CHARSET_NAME,
+    'latin6' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+};
+
+$Charset->{'iso_6937-2-add'}
+= $IANACharset->{'iso_6937-2-add'}
+= $IANACharset->{'iso-ir-142'}
+= $IANACharset->{'csisotextcomm'}
+= {
+  iana_names => {
+    'iso_6937-2-add' => PRIMARY_CHARSET_NAME,
+    'iso-ir-142' => REGISTERED_CHARSET_NAME,
+    'csisotextcomm' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+};
+
+$Charset->{'jis_x0201'}
+= $IANACharset->{'jis_x0201'}
+= $IANACharset->{'x0201'}
+= $IANACharset->{'cshalfwidthkatakana'}
+= {
+  iana_names => {
+    'jis_x0201' => PRIMARY_CHARSET_NAME,
+    'x0201' => REGISTERED_CHARSET_NAME,
+    'cshalfwidthkatakana' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+};
+
+$Charset->{'jis_encoding'}
+= $IANACharset->{'jis_encoding'}
+= $IANACharset->{'csjisencoding'}
+= {
+  iana_names => {
+    'jis_encoding' => PRIMARY_CHARSET_NAME,
+    'csjisencoding' => REGISTERED_CHARSET_NAME,
+  },
+  ## NOTE: What is this?
+};
 
 $Charset->{'shift_jis'}
 = $IANACharset->{'shift_jis'}
@@ -88,6 +319,7 @@ $Charset->{'shift_jis'}
     'ms_kanji' => REGISTERED_CHARSET_NAME,
     'csshiftjis' => REGISTERED_CHARSET_NAME,
   },
+  mime_text_suitable => 1,
 };
 
 $Charset->{'euc-jp'}
@@ -103,7 +335,28 @@ $Charset->{'euc-jp'}
   is_html_ascii_superset => 1,
 };
 
+$Charset->{'extended_unix_code_fixed_width_for_japanese'}
+= $IANACharset->{'extended_unix_code_fixed_width_for_japanese'}
+= $IANACharset->{'cseucfixwidjapanese'}
+= {
+  iana_names => {
+    'extended_unix_code_fixed_width_for_japanese' => PRIMARY_CHARSET_NAME,
+    'cseucfixwidjapanese' => REGISTERED_CHARSET_NAME,
+  },
+};
+
 ## TODO: ...
+
+$Charset->{'euc-kr'}
+= $IANACharset->{'euc-kr'}
+= $IANACharset->{'cseuckr'}
+= {
+  iana_names => {
+    'euc-kr' => PRIMARY_CHARSET_NAME | PREFERRED_CHARSET_NAME,
+    'cseuckr' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+};
 
 $Charset->{'iso-2022-jp'}
 = $IANACharset->{'iso-2022-jp'}
@@ -113,6 +366,18 @@ $Charset->{'iso-2022-jp'}
     'iso-2022-jp' => PREFERRED_CHARSET_NAME | PRIMARY_CHARSET_NAME,
     'csiso2022jp' => REGISTERED_CHARSET_NAME,
   },
+  mime_text_suitable => 1,
+};
+
+$Charset->{'iso-2022-jp-2'}
+= $IANACharset->{'iso-2022-jp-2'}
+= $IANACharset->{'csiso2022jp2'}
+= {
+  iana_names => {
+    'iso-2022-jp-2' => PREFERRED_CHARSET_NAME | PRIMARY_CHARSET_NAME,
+    'csiso2022jp2' => REGISTERED_CHARSET_NAME,
+  },
+  mime_text_suitable => 1,
 };
 
 ## TODO: ...
@@ -124,6 +389,34 @@ $Charset->{'utf-8'}
     'utf-8' => PRIMARY_CHARSET_NAME,
   },
   is_html_ascii_superset => 1,
+};
+
+## TODO: ...
+
+$Charset->{'gbk'}
+= $IANACharset->{'gbk'}
+= $IANACharset->{'cp936'}
+= $IANACharset->{'ms936'}
+= $IANACharset->{'windows-936'}
+= {
+  iana_names => {
+    'gbk' => PRIMARY_CHARSET_NAME,
+    'cp936' => REGISTERED_CHARSET_NAME,
+    'ms936' => REGISTERED_CHARSET_NAME,
+    'windows-936' => REGISTERED_CHARSET_NAME,
+  },
+  iana_status => STATUS_COMMON | STATUS_OBSOLETE,
+  mime_text_suitable => 1,
+};
+
+$Charset->{'gb18030'}
+= $IANACharset->{'gb18030'}
+= {
+  iana_names => {
+    'gb18030' => PRIMARY_CHARSET_NAME,
+  },
+  iana_status => STATUS_COMMON,
+  mime_text_suitable => 1,
 };
 
 ## TODO: ...
@@ -154,6 +447,54 @@ $Charset->{'utf-16'}
 
 ## TODO: ...
 
+$Charset->{'windows-31j'}
+= $IANACharset->{'windows-31j'}
+= $IANACharset->{'cswindows31j'}
+= {
+  iana_names => {
+    'windows-31j' => PRIMARY_CHARSET_NAME,
+    'cswindows31j' => REGISTERED_CHARSET_NAME,
+  },
+  iana_status => STATUS_LIMITED_USE, # maybe
+  mime_text_suitable => 1,
+};
+
+$Charset->{'gb2312'}
+= $IANACharset->{'gb2312'}
+= $IANACharset->{'csgb2312'}
+= {
+  iana_names => {
+    'gb2312' => PRIMARY_CHARSET_NAME | PREFERRED_CHARSET_NAME,
+    'csgb2312' => REGISTERED_CHARSET_NAME,
+  },
+  is_html_ascii_superset => 1,
+  mime_text_suitable => 1,
+};
+
+$Charset->{'big5'}
+= $IANACharset->{'big5'}
+= $IANACharset->{'csbig5'}
+= {
+  iana_names => {
+    'big5' => PRIMARY_CHARSET_NAME | PREFERRED_CHARSET_NAME,
+    'csbig5' => REGISTERED_CHARSET_NAME,
+  },
+  mime_text_suitable => 1,
+};
+
+## TODO: ...
+
+$Charset->{'big5-hkscs'}
+= $IANACharset->{'big5-hkscs'}
+= {
+  iana_names => {
+    'big5-hkscs' => PRIMARY_CHARSET_NAME,
+  },
+  mime_text_suitable => 1,
+};
+
+## TODO: ...
+
 $Charset->{'windows-1252'}
 = $IANACharset->{'windows-1252'}
 = {
@@ -171,5 +512,5 @@ sub is_syntactically_iana_charset_name ($) {
 } # is_suntactically_valid_iana_charset_name
 
 1;
-## $Date: 2007/11/18 11:08:40 $
+## $Date: 2007/11/21 12:47:22 $
 
