@@ -1,3 +1,7 @@
+2007-11-21  Wakaba  <wakaba@suika.fam.cx>
+
+	* Info.pm: More charset definitions.
+
 2007-11-18  Wakaba  <wakaba@suika.fam.cx>
 
 	* Info.pm: New Perl module.
